--- a/code/python/pyproject.toml
+++ b/code/python/pyproject.toml
@@ -7,7 +7,10 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
+python = "3.10.12"
 scrapy = "^2.11.0"
+beautifulsoup4 = "^4.12.2"
+scrapy-splash = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core"]
