--- a/code/python/pyproject.toml
+++ b/code/python/pyproject.toml
@@ -10,14 +10,16 @@ readme = "README.md"
 python = "3.10.12"
 scrapy = "^2.11.0"
 beautifulsoup4 = "^4.12.2"
-scrapy-splash = "^0.9.0"
-pylint = "^3.0.2"
+selenium = "^4.15.2"
 black = "^23.10.1"
 scrapy-useragents = "^0.0.1"
+pylint = "^3.0.2"
+python-dateutil = "^2.8.2"
 
 [tool.poetry.scripts]
-lint = "commands:lint"
-fmt = "commands:format_code"
+lint = "poetry:lint"
+fmt = "poetry:format_code"
+crawl = "poetry:run_scrapy"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
