--- a/code/backend/pyproject.toml
+++ b/code/backend/pyproject.toml
@@ -15,6 +15,7 @@ black = "^23.10.1"
 scrapy-useragents = "^0.0.1"
 pylint = "^3.0.2"
 python-dateutil = "^2.8.2"
+elasticsearch = "^8.10.1"
 
 [tool.poetry.scripts]
 lint = "poetry:lint"
