--- a/code/backend/pyproject.toml
+++ b/code/backend/pyproject.toml
@@ -16,6 +16,7 @@ scrapy-useragents = "^0.0.1"
 pylint = "^3.0.2"
 python-dateutil = "^2.8.2"
 elasticsearch = "^8.10.1"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.scripts]
 lint = "poetry:lint"
